# CommitLog

./: CMakeLists.txt  README.md  main.cpp
common/: config.h
include/: CommitlogManager.hh  commitlog.hh  dummyDB.hh  log_record.hh
src/: CommitlogManager.cc  commitlog.cc  dummyDB.cc  log_record.cc
util/: buffer.cc  buffer.hh  common.hh  errors.hh
